[project]
name = "apis-instance-tbf"
version = "0.1.0"
description = "Thomas Bernhard online"
authors = [
    { name = "K Kollmann", email = "dev-kk@oeaw.ac.at" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apis-acdhch-default-settings>=2.18.0,<2.19",
    "apis-core-rdf>=0.62.1,<0.63",
    "django-interval>=0.5.4,<0.5.5",
    "psycopg-binary>=3.3.4,<3.4",
    "psycopg>=3.3.4,<3.4",
]

[dependency-groups]
dev = [
  {include-group = "helpers"},
  {include-group = "lint"},
]
docs = [
    "myst-parser>=5.1.0,<5.2",
    "sphinx>=9.1.0,<9.2",
    "sphinx-rtd-theme>=3.1.0,<3.2",
]
helpers = [
    "deptry>=0.25.1,<0.26",
    "django-debug-toolbar>=6.3.0,<6.4.0",
]
lint = [
    "djlint>=1.39.0,<1.40",
    "pylint>=4.0.5,<4.1",
    "ruff>=0.15.16,<0.16",
]

[tool.uv]
add-bounds = "minor"
resolution = "lowest-direct"

[tool.uv.sources]
# used for local development; use uv lock and sync with --no-sources to lock
# against the PyPI versions of packages
apis-core-rdf = { path = "./apis_core", editable = true }
apis-acdhch-default-settings = { path = "./apis_acdhch_default_settings", editable = true }

[tool.djlint]
# djLint config options: https://djlint.com/docs/configuration/#options
indent=2
profile="django"
extension="html"
blank_line_before_tag="block,if"
blank_line_after_tag="endif,endblock"
ignore="H006"

[tool.ruff]
src = ["apis_ontology"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
# Ruff lint rules: https://docs.astral.sh/ruff/rules/
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle errors
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
]
# Rules conflicting with formatter:
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = [
    "E111",
    "E114",
    "E117",
    "E501",
    "F403",
    "W191",
]

[tool.ruff.lint.isort]
known-first-party = ["apis_ontology"]

[tool.ruff.lint.per-file-ignores]
"**/settings.py" = ["F405"]
"**/migrations/*" = ["I001"]

[tool.hatch.build.targets.sdist]
include = [
    "/apis_ontology",
    "/data",
    ".gitignore",
    "manage.py",
    "pyproject.toml",
    "uv.lock"
]

[tool.hatch.build.targets.wheel]
include = [
    "/apis_ontology",
    "/data",
    ".gitignore",
    "manage.py",
    "pyproject.toml",
    "uv.lock"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
